# censo2024

./: .gitignore  README.md  pyproject.toml
data/processed/: hogares_mapping.json  personas_mapping.json  viviendas_mapping.json
notebooks/: 1.0-dc-loading-maps.ipynb  1.1-dc-preprocess-data.ipynb  1.2-dc-preprocess-tables.ipynb  2.0-dc-energy.ipynb  README.md
